k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: young-certi-api
  namespace: young-certi
  labels:
    app.kubernetes.io/name: young-certi-api
    app.kubernetes.io/part-of: young-certi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: young-certi-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: young-certi-api
        app.kubernetes.io/part-of: young-certi
    spec:
      serviceAccountName: young-certi-api # ServiceAccount 적용
      containers:
        - name: api
          image: young-certi-backend  # kustomization.yaml에서 아래 값을 실제 ECR 이미지로 치환
          imagePullPolicy: IfNotPresent # commit SHA처럼 매번 새 태그를 쓰는 구조라면 IfNotPresent로 충분
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          # 컨테이너가 살아 있는지 확인합니다.
          # 계속 실패하면 kubelet이 컨테이너를 재시작합니다.
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
            
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
