k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: young-certi-api
  namespace: young-certi
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing # 외부 인터넷에서 접근 가능한 ALB 생성 (다른 옵션: internal)
    alb.ingress.kubernetes.io/target-type: ip # ALB Target Group이 Pod IP를 직접 대상으로 삼음 (다른 옵션: instance)
    alb.ingress.kubernetes.io/healthcheck-path: /healthz  # ALB health check 경로

    # HTTP 80과 HTTPS 443 listener 모두 만듦
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ACM에서 발급받은 인증서
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:474668399282:certificate/f5bf84e5-5f80-4e03-be31-c8a445eff7c9

    # HTTP -> HTTPS 리다이렉트
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb
  rules:
    - host: api.certi.adansonia.cloud # host 추가 -> service로 트래픽 라우팅
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: young-certi-api
                port:
                  number: 80
